Revert "NMS-6530: Trying to make use of URI rather than URL in provisioning requisitions"
This reverts commit ace0a8f79447c260df85e11d21cb31da3ff6a889.